kubernetes/clusters/KC/homeassistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: homeassistant
    namespace: homeassistant
spec:
    replicas: 1
    progressDeadlineSeconds: 600
    revisionHistoryLimit: 2
    strategy:
        type: Recreate
    selector:
        matchLabels:
            app: homeassistant
    template:
        metadata:
            labels:
                app: homeassistant
            annotations:
                k8s.v1.cni.cncf.io/networks: ENC[AES256_GCM,data:0RX/Pm+nR94qpv6UeIeBBQkm4lp5tM5VF3P7WdztWtFCfqk1j3vWJPhvjuNgeKq4UZBe3Coq6JcOR6MqmiFS4A4NDfJ5/LqIvQSCM++jGU9p+fQQuHxxpZG8I9vEfGYPnVagKMGltEKMRd5yHiwlX1E=,iv:OyAv/MXZIsCxUSOVWPlHiDvAqw7yXipVREVxO1isHz4=,tag:2EM+WC9keX2sKuSUqKyQ9Q==,type:str]
        spec:
            containers:
                - name: homeassistant
                  image: ghcr.io/home-assistant/home-assistant:2024.4.3
                  volumeMounts:
                    - name: pvc
                      mountPath: /config
                      subPath: config
            volumes:
                - name: pvc
                  persistentVolumeClaim:
                    claimName: homeassistant-pvc
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvL3BsRzlJdGVuZ2ZhQy9z
[...]
            5tIS/79uLQhj5AeB+DTCh8Jhz2I7uWklDySLYcwZxsPoHPjJ9oNpbw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-04-29T22:32:08Z"
    mac: ENC[AES256_GCM,data:WKqRBZqiSqx9O5IikI3okb86zhk0bnK6dfs32RMC/4+NfMHIlDeRG+77oZtW9Ol+ApGjRYQNDB4p41UJZpGNpPEfV2Tn0H0ycqb73Cv8XyF8jXlMcq55kzWNQqxivjKmYOHQ2WOSgcINuQOLEnYLIcXA7cckagMbs1iYnBSk17Y=,iv:7PSHetsvsiVm+IfY+Equ6Bg/HdTHeN66FMWr95FQjXk=,tag:gVt2tOFsjjI6AIM4JjPQGQ==,type:str]
    pgp: []
    encrypted_regex: ^(data|env|k8s.v1.cni.cncf.io/networks)$
    version: 3.8.1
