kubernetes/clusters/KC/homeassistant/samba-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: samba
    namespace: homeassistant
spec:
    replicas: 1
    progressDeadlineSeconds: 600
    revisionHistoryLimit: 2
    strategy:
        type: Recreate
    selector:
        matchLabels:
            app: samba
    template:
        metadata:
            labels:
                app: samba
        spec:
            containers:
                - name: samba
                  image: ghcr.io/dockur/samba:4.19.5
                  imagePullPolicy: Always
                  resources:
                    requests:
                        cpu: 512m
                        memory: 512Mi
                    limits:
                        cpu: 1024m
                        memory: 1Gi
                  volumeMounts:
                    - name: config
                      mountPath: /etc/samba/
                      readOnly: true
                    - name: pvc
                      mountPath: /config
                      subPath: config
            volumes:
                - name: pvc
                  persistentVolumeClaim:
                    claimName: homeassistant-pvc
                - name: config
                  configMap:
                    name: samba
                    items:
                        - key: smb.conf
                          path: smb.conf
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBSQnhwNGs4UEZ5bVlBRzlC
[...]
            4YRLi7N5OOgyWNpYQHOhUVSHLW9qgweZTSfJmNFcbF2HVVDiezqcKg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-04-29T21:44:02Z"
    mac: ENC[AES256_GCM,data:m2DT/wHR5tqtPqyvigwwwx7F9fU6dA822qnDnuolMnkxVFB2s0+8sSmwEIUP25rqTCL2dqB2/furFInKHYTvJkspDOXxDqlqV/2N2J2I1L08MPNGGcquTEu9Xt2LdRLW7RwlLoGXKpZR/n9uyD8wqDqIjETirLhbw77M7ua+Shc=,iv:57fVRZ9g875fnEONRN6wRJAETZToL663MRaotXcu8Vw=,tag:Cioi3hQyXp7/ySwLNI3ijg==,type:str]
    pgp: []
    encrypted_regex: ^(data|env|k8s.v1.cni.cncf.io/networks)$
    version: 3.8.1
