kubernetes/clusters/KC/homeassistant/samba-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: samba
    namespace: homeassistant
spec:
    selector:
        app: samba
    type: LoadBalancer
    loadBalancerIP: ENC[AES256_GCM,data:sdzC+l2Ilkj3a78=,iv:LsXvNpwUvL0nmYeAXZkH+JdPuMWeauUu23WkyTD8d8E=,tag:wsTmxDMO7zqMfiOilxuPUg==,type:str]
    ports:
        - name: ENC[AES256_GCM,data:5CHj,iv:9kvGgk5ZxnWsIOLW2btU8+8HxwPV4UGB14M4o/u0dYg=,tag:Uzt7Rr8tCIynkcG5SCy64A==,type:str]
          port: ENC[AES256_GCM,data:ihC4,iv:EHLNvZOvaBWi3REqgi26Y/E0ObgUeFhcAC7rekp4t+o=,tag:kRP2WdgXTieqCYkTOCnxcg==,type:int]
          targetPort: ENC[AES256_GCM,data:7ocH,iv:sAbEvyVrp36OMCxfajKGBYDkgg9MErSIl0kgRgM8AOU=,tag:cZXpGYKeJwDkUHJdnizbaA==,type:int]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5MWxKbnZVdnNCak9uS1lD
[...]
            2jf6vJ+lvV/s/GcAX/jeY57fRTfSMQrkBGkFUv61GV8VIkHFxFmzKw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-04-29T21:45:50Z"
    mac: ENC[AES256_GCM,data:ypyzhh1bawpZeZlKlzjShmoulpvkwCcmG61DZb0OfHrvDCWQLT7txgS2e9PM3W8sZOLGbe0C9VCOXvMHXjNho1AA9KcLyp8EC+h0wYSBEe8c5Iuj+GGO9r2hvtW0yEjs+3iVh4U1i0W8ERLj7s114M8r5MqgHHoTXvVgTuOWjGM=,iv:GFmII6Y6nKvWE9dImSnZMXMDGKkECRAB7NMT8vBPnSM=,tag:QjAP7whLjbGDNh+b9AC6jg==,type:str]
    pgp: []
    encrypted_regex: ^(data|ports|externalName|loadBalancerIP)$
    version: 3.8.1
