kubernetes/clusters/KC/homeassistant/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: homeassistant
    namespace: homeassistant
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:0pZOrnvqn5DROqxMX4niPG2I3jjXq0GlItPNNBYZvdVO,iv:3+DYXWD5VZd5VnEOdzqTW/9Q4g2DfSwDieTkA+IUugY=,tag:77MlJNkqV1SlOBDSf+2q7g==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:5V3VxtnxIVBm+L2v5g==,iv:jYklwDCBUccuVs6USUxNOQ/Y7AegsMq46Bn+TYSBzWk=,tag:IZBVEMkpQr9w7YsbOa+BSw==,type:str]
              namespace: ENC[AES256_GCM,data:jlJw0ap5Edl0vKtvtA==,iv:fnvtLf8acBub2kiDmzVqPhuS9WytECANdRLDAZjy8kw=,tag:NHr/Iq9RokqBV5KEjgT6rg==,type:str]
              port: ENC[AES256_GCM,data:KI8eoA==,iv:2jl/nwwIw9zgDstKzRn2rwmt7YR3vEZNCxYTrSmu2B4=,tag:9AtTFNEduhMC7eWZk+qlrQ==,type:int]
        - match: ENC[AES256_GCM,data:q3/aIm5nGa10cDZ+/8P6DduA9klJ99/2,iv:2uyWBM9tAHq5Fx75FrO2jF3GRMntoDCg03SohWRdXns=,tag:4p+dsKCnhI6qwUr+rDYaZg==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:5pJFLtYOfnua+fK5Gw==,iv:NliGDnMYYqGVZEKC1l+bU4M26mF5/79Z5TGXlUjw7Ec=,tag:V+FXmVmFRMEPXHcOGTjoug==,type:str]
              namespace: ENC[AES256_GCM,data:fX7fNbUyTsiTUwoRcA==,iv:7ebpOdMIeWtAJApBTvz5HDWv1vhJbnp5HLYB2KskHzI=,tag:+5L5C1pqkXp/6bB6GXkK6Q==,type:str]
              port: ENC[AES256_GCM,data:mQlYzQ==,iv:aFW1e6sBkdHuvuOc6L+ykWb6g8G7K8KhpuRkdY6cJjY=,tag:XbH9h5ErPz29WvkxUnX0uA==,type:int]
    tls:
        secretName: ENC[AES256_GCM,data:/qtDNBix35wLGWw=,iv:8bAHikjDsD44uildWrpQowx6NB5k3c9LtzfnIT32mzU=,tag:IOpe3xFCpXK8+LlOqLt0QA==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjcWZkVUtvWVY3UWZiWHQ3
[...]
            veKWcLr5+cpEU+9pSnzKHRmA3lqQxKCqd/efuQMx3DR6N9baQeQ39Q==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-04-22T15:17:02Z"
    mac: ENC[AES256_GCM,data:ZtwAhJ3+4ZNLA1E0K6ObqaAqKUTb0pdjY4bA5Ftxs2+/lB39feUYChHLVHkf3yWT4rGR82sk0DhQK61B+y17L0rIcmhn+vT7XN2hqpcjbQ/gf6SVJQl/Vc0qOAkQzr1sRYulvc9AfleKOL9Z5gSq0eKWzpqe8wIKrb6nUTIsWfI=,iv:5yJk5Sd2aSrONqQGoOsNKBTpf81efpOih47OF/J3c3U=,tag:GikchrWbgdK/wdRr0fQxRw==,type:str]
    pgp: []
    encrypted_regex: ^(data|match|secretName|services)$
    version: 3.8.1
